--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
               <h3 class="player-name">Lionel Messi</h3>
               <p class="player-info">
                 Lionel Andrés Messi is an Argentine professional footballer who
-                plays as a forward or an attacking midfielder and captains the
-                Argentina national team.
+                plays as a forward or an attacking midfielder and captains.
               </p>
             </div>
           </div>
@@ -93,37 +92,37 @@
               <img src="images/players/player-3.png" alt="" />
             </div>
             <div class="players-details">
-                <h3 class="player-name">Cristiano Ronaldo</h3>
-            <p class="player-info">
-              Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese
-              professional footballer who plays as a forward for Serie A club
-              Juventus and captains the Portugal national team.
-            </p>
+              <h3 class="player-name">Cristiano Ronaldo</h3>
+              <p class="player-info">
+                Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese
+                professional footballer who plays as a forward for Serie A club
+                Juventus and captains the Portugal national team.
+              </p>
             </div>
           </div>
           <div class="player">
             <div class="player-banner">
               <img src="images/players/player-4.png" alt="" />
             </div>
-           <div class="players-details">
-            <h3 class="player-name">Paulo Dybala</h3>
-            <p class="player-info">
-              Paulo Exequiel Dybala is an Argentine professional footballer who
-              plays as a forward for Serie A club Juventus and the Argentina
-              national team.
-            </p>
-           </div>
+            <div class="players-details">
+              <h3 class="player-name">Paulo Dybala</h3>
+              <p class="player-info">
+                Paulo Exequiel Dybala is an Argentine professional footballer
+                who plays as a forward for Serie A club Juventus and the
+                Argentina national team.
+              </p>
+            </div>
           </div>
           <div class="player">
             <div class="player-banner">
               <img src="images/players/player-5.png" alt="" />
             </div>
             <div class="players-details">
-                <h3 class="player-name">Mesut Ozil</h3>
-            <p class="player-info">
-              Mesut Özil is a German professional footballer who plays as an
-              attacking midfielder for Süper Lig club Fenerbahçe.
-            </p>
+              <h3 class="player-name">Mesut Ozil</h3>
+              <p class="player-info">
+                Mesut Özil is a German professional footballer who plays as an
+                attacking midfielder for Süper Lig club Fenerbahçe.
+              </p>
             </div>
           </div>
           <div class="player">
@@ -131,90 +130,93 @@
               <img src="images/players/player-6.png" alt="" />
             </div>
             <div class="players-details">
-                <h3 class="player-name">Mauro Icardi</h3>
-            <p class="player-info">
-              Mauro Emanuel Icardi is an Argentine professional footballer who
-              plays as a striker for Ligue 1 club Paris Saint-Germain and the
-              Argentina national team.
-            </p>
+              <h3 class="player-name">Mauro Icardi</h3>
+              <p class="player-info">
+                Mauro Emanuel Icardi is an Argentine professional footballer who
+                plays as a striker for Ligue 1 club Paris Saint-Germain and the
+                Argentina national team.
+              </p>
             </div>
           </div>
           <div class="player">
             <div class="player-banner">
               <img src="images/players/player-7.png" alt="" />
             </div>
-           <div class="players-details">
-            <h3 class="player-name">Di Maria</h3>
-            <p class="player-info">
-              Ángel Fabián Di María is an Argentine professional footballer who
-              plays for Ligue 1 club Paris Saint-Germain and the Argentina
-              national team.
-            </p>
-           </div>
+            <div class="players-details">
+              <h3 class="player-name">Di Maria</h3>
+              <p class="player-info">
+                Ángel Fabián Di María is an Argentine professional footballer
+                who plays for Ligue 1 club Paris Saint-Germain and the Argentina
+                national team.
+              </p>
+            </div>
           </div>
           <div class="player">
             <div class="player-banner">
               <img src="images/players/player-8.png" alt="" />
             </div>
-          <div class="players-details">
-            <h3 class="player-name">Kylian Mbappé</h3>
-            <p class="player-info">
-              Kylian Mbappé Lottin is a French professional footballer who plays
-              as a forward for Ligue 1 club Paris Saint-Germain and the France
-              national team.
-            </p>
-          </div>
+            <div class="players-details">
+              <h3 class="player-name">Kylian Mbappé</h3>
+              <p class="player-info">
+                Kylian Mbappé Lottin is a French professional footballer who
+                plays as a forward for Ligue 1 club Paris Saint-Germain and the
+                France national team.
+              </p>
+            </div>
           </div>
           <div class="player">
             <div class="player-banner">
               <img src="images/players/player-9.png" alt="" />
             </div>
-            <h3 class="player-name">Mohamed Salah</h3>
-            <p class="player-info">
-              Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional
-              footballer who plays as a forward for Premier League club
-              Liverpool and captains the Egypt national team.
-            </p>
+            <div class="players-details">
+              <h3 class="player-name">Mohamed Salah</h3>
+              <p class="player-info">
+                Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional
+                footballer who plays as a forward for Premier League club
+                Liverpool and captains the Egypt national team.
+              </p>
+            </div>
           </div>
           <div class="player">
             <div class="player-banner">
               <img src="images/players/player-10.png" alt="" />
             </div>
-           
-              <div class="players-details">
-                <h3 class="player-name">Harry Kane</h3>
-                <p class="player-info">
-                  Harry Edward Kane MBE is an English professional footballer who
-                  plays as a striker for Premier League club Tottenham Hotspur and
-                  captains the England national team.
-                </p>
-              </div>
+
+            <div class="players-details">
+              <h3 class="player-name">Harry Kane</h3>
+              <p class="player-info">
+                Harry Edward Kane MBE is an English professional footballer who
+                plays as a striker for Premier League club Tottenham Hotspur and
+                captains the England national team.
+              </p>
             </div>
           </div>
           <div class="player">
             <div class="player-banner">
               <img src="images/players/player-11.png" alt="" />
             </div>
+
             <div class="players-details">
-                <h3 class="player-name">Kevin De Bruyne</h3>
-            <p class="player-info">
-              Kevin De Bruyne is a Belgian professional footballer who plays as
-              a midfielder for Premier League club Manchester City, where he is
-              vice-captain, and the Belgium national team.
-            </p>
+              <h3 class="player-name">Kevin De Bruine</h3>
+              <p class="player-info">
+                Kevin De Bruyne is a Belgian professional footballer who plays
+                as a midfielder for Premier League club Manchester City, where
+                he is vice-captain, and the Belgium national team.
+              </p>
             </div>
           </div>
           <div class="player">
             <div class="player-banner">
               <img src="images/players/player-12.png" alt="" />
             </div>
+
             <div class="players-details">
-                <h3 class="player-name">Philippe Coutinho</h3>
-            <p class="player-info">
-              Philippe Coutinho Correia is a Brazilian professional footballer
-              who plays as an attacking midfielder or winger for Spanish club
-              Barcelona and the Brazil national team.
-            </p>
+              <h3 class="player-name">Philippe Countinho</h3>
+              <p class="player-info">
+                Philippe Coutinho Correia is a Brazilian professional footballer
+                who plays as an attacking midfielder or winger for Spanish club
+                Barcelona and the Brazil national team.
+              </p>
             </div>
           </div>
         </div>
