--- a/index.html
+++ b/index.html
@@ -24,11 +24,7 @@
           <li><a href="#">Upcoming Matches</a></li>
           <li><a href="#">Contact</a></li>
           <span class="login-button">
-            <a
-              class="button-link"
-              target="_blank"
-              href="https://www.foodpanda.com"
-            >
+            <a class="button-link" target="_blank" href="">
               <i class="fas fa-sign-in-alt">Login</i></a
             >
 
@@ -58,42 +54,45 @@
 
     <!-- main start -->
     <main>
-      <!-- top players and all highlight -->
+      <!-- Latest players -->
       <section class="container">
+        <h2 class="section-title"></h2>
         <div class="players">
           <div class="player">
             <div class="player-banner">
-              <img src="images/players/player-1.png" alt="" />
+              <img src="/images/players/player-1.png" alt="img1" />
             </div>
-            <div class="players-details">
-              <h3 class="player-name">Neymar Jr</h3>
-              <p class="player-info">
-                Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian
-                professional footballer who plays as a forward for Ligue 1 club
-                Paris Saint-Germain and the Brazil national team.
+            <div class="player-detail">
+              <h3 class="player-title">Neymar Jr</h3>
+              <p class="player-author">
+                Neymar da Silva Santos Júnior (born 5 February 1992), known as
+                Neymar, is a Brazilian professional footballer who plays as a
+                forward for Ligue 1 club Paris Saint-Germain and the Brazil
+                national team. He is widely regarded as one of the best players
+                in the world.
               </p>
             </div>
           </div>
           <div class="player">
             <div class="player-banner">
-              <img src="images/players/player-2.png" alt="" />
+              <img src="/images/players/player-2.png" alt="" />
             </div>
-
-            <div class="players-details">
-              <h3 class="player-name">Lionel Messi</h3>
-              <p class="player-info">
+            <div class="player-detail">
+              <h3 class="player-title">Lionel Messi</h3>
+              <p class="player-author">
                 Lionel Andrés Messi is an Argentine professional footballer who
-                plays as a forward or an attacking midfielder and captains.
+                plays as a forward or an attacking midfielder and captains the
+                Argentina national team. He is currently a free agent.
               </p>
             </div>
           </div>
           <div class="player">
             <div class="player-banner">
-              <img src="images/players/player-3.png" alt="" />
+              <img src="/images/players/player-3.png" alt="" />
             </div>
-            <div class="players-details">
-              <h3 class="player-name">Cristiano Ronaldo</h3>
-              <p class="player-info">
+            <div class="player-detail">
+              <h3 class="player-title">Cristiano Ronaldo</h3>
+              <p class="player-author">
                 Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese
                 professional footballer who plays as a forward for Serie A club
                 Juventus and captains the Portugal national team.
@@ -102,11 +101,11 @@
           </div>
           <div class="player">
             <div class="player-banner">
-              <img src="images/players/player-4.png" alt="" />
+              <img src="/images/players/player-4.png" alt="" />
             </div>
-            <div class="players-details">
-              <h3 class="player-name">Paulo Dybala</h3>
-              <p class="player-info">
+            <div class="player-detail">
+              <h3 class="player-title">Paulo Dybala</h3>
+              <p class="player-author">
                 Paulo Exequiel Dybala is an Argentine professional footballer
                 who plays as a forward for Serie A club Juventus and the
                 Argentina national team.
@@ -115,23 +114,26 @@
           </div>
           <div class="player">
             <div class="player-banner">
-              <img src="images/players/player-5.png" alt="" />
+              <img src="/images/players/player-5.png" alt="" />
             </div>
-            <div class="players-details">
-              <h3 class="player-name">Mesut Ozil</h3>
-              <p class="player-info">
+            <div class="player-detail">
+              <h3 class="player-title">Mesut Ozil</h3>
+              <p class="player-author">
                 Mesut Özil is a German professional footballer who plays as an
-                attacking midfielder for Süper Lig club Fenerbahçe.
+                attacking midfielder for Süper Lig club Fenerbahçe. Nicknamed
+                "The Assist King", Özil is known for his technical skills,
+                creativity, agility, and finesse. He has also played as a wide
+                midfielder in his career.
               </p>
             </div>
           </div>
           <div class="player">
             <div class="player-banner">
-              <img src="images/players/player-6.png" alt="" />
+              <img src="/images/players/player-6.png" alt="" />
             </div>
-            <div class="players-details">
-              <h3 class="player-name">Mauro Icardi</h3>
-              <p class="player-info">
+            <div class="player-detail">
+              <h3 class="player-title">Mauro Icardi</h3>
+              <p class="player-author">
                 Mauro Emanuel Icardi is an Argentine professional footballer who
                 plays as a striker for Ligue 1 club Paris Saint-Germain and the
                 Argentina national team.
@@ -140,65 +142,69 @@
           </div>
           <div class="player">
             <div class="player-banner">
-              <img src="images/players/player-7.png" alt="" />
+              <img src="/images/players/player-7.png" alt="" />
             </div>
-            <div class="players-details">
-              <h3 class="player-name">Di Maria</h3>
-              <p class="player-info">
+            <div class="player-detail">
+              <h3 class="player-title">Ángel Di María</h3>
+              <p class="player-author">
                 Ángel Fabián Di María is an Argentine professional footballer
                 who plays for Ligue 1 club Paris Saint-Germain and the Argentina
-                national team.
+                national team. He can play as either a winger or attacking
+                midfielder.
               </p>
             </div>
           </div>
           <div class="player">
             <div class="player-banner">
-              <img src="images/players/player-8.png" alt="" />
+              <img src="/images/players/player-8.png" alt="" />
             </div>
-            <div class="players-details">
-              <h3 class="player-name">Kylian Mbappé</h3>
-              <p class="player-info">
+            <div class="player-detail">
+              <h3 class="player-title">Kylian Mbappé</h3>
+              <p class="player-author">
                 Kylian Mbappé Lottin is a French professional footballer who
                 plays as a forward for Ligue 1 club Paris Saint-Germain and the
-                France national team.
+                France national team. Mbappé began his senior career with Ligue
+                1 club Monaco, making his professional debut in 2015, aged 16.
               </p>
             </div>
           </div>
           <div class="player">
             <div class="player-banner">
-              <img src="images/players/player-9.png" alt="" />
+              <img src="/images/players/player-9.png" alt="" />
             </div>
-            <div class="players-details">
-              <h3 class="player-name">Mohamed Salah</h3>
-              <p class="player-info">
+            <div class="player-detail">
+              <h3 class="player-title">Mohamed Salah</h3>
+              <p class="player-author">
                 Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional
                 footballer who plays as a forward for Premier League club
-                Liverpool and captains the Egypt national team.
+                Liverpool and captains the Egypt national team. Considered one
+                of the best players in the world, he is known for his finishing,
+                dribbling, and speed.
               </p>
             </div>
           </div>
           <div class="player">
             <div class="player-banner">
-              <img src="images/players/player-10.png" alt="" />
+              <img src="/images/players/player-10.png" alt="" />
             </div>
-
-            <div class="players-details">
-              <h3 class="player-name">Harry Kane</h3>
-              <p class="player-info">
+            <div class="player-detail">
+              <h3 class="player-title">Harry Kane</h3>
+              <p class="player-author">
                 Harry Edward Kane MBE is an English professional footballer who
                 plays as a striker for Premier League club Tottenham Hotspur and
-                captains the England national team.
+                captains the England national team. Regarded as one of the best
+                strikers in the world, Kane is known for his prolific
+                goalscoring record and ability to link play.
               </p>
             </div>
           </div>
           <div class="player">
             <div class="player-banner">
-              <img src="images/players/player-11.png" alt="" />
+              <img src="/images/players/player-11.png" alt="" />
             </div>
-
-            <div class="players-details">
-              <h3 class="player-name">Kevin De Bruine</h3>
-              <p class="player-info">
+            <div class="player-detail">
+              <h3 class="player-title">Kevin De Bruyne</h3>
+              <p class="player-author">
                 Kevin De Bruyne is a Belgian professional footballer who plays
                 as a midfielder for Premier League club Manchester City, where
                 he is vice-captain, and the Belgium national team.
@@ -207,21 +213,135 @@
           </div>
           <div class="player">
             <div class="player-banner">
-              <img src="images/players/player-12.png" alt="" />
+              <img src="/images/players/player-12.png" alt="" />
             </div>
-
-            <div class="players-details">
-              <h3 class="player-name">Philippe Countinho</h3>
-              <p class="player-info">
+            <div class="player-detail">
+              <h3 class="player-title">Philippe Coutinho</h3>
+              <p class="player-author">
                 Philippe Coutinho Correia is a Brazilian professional footballer
                 who plays as an attacking midfielder or winger for Spanish club
-                Barcelona and the Brazil national team.
+                Barcelona and the Brazil national team. He is known for his
+                combination of vision, passing, dribbling and ability to conjure
+                curving long-range strikes.
               </p>
             </div>
           </div>
         </div>
       </section>
+      <!-- All highlight  -->
+      <section class="allhighlight-container">
+        <div class="detail-container">
+          <div class="highlights-title-container">
+            <h1>All Highlights</h1>
+            <h1>Copa America 2021</h1>
+            <p class="player-info">
+              The 2021 Copa América was the 47th edition of the Copa América,
+              the international men's football championship organised by South
+              America's football ruling body CONMEBOL. The tournament took place
+              in Brazil from 13 June to 10 July 2021.
+            </p>
+            <a
+              class="button-link-container"
+              target="_blank"
+              href="https://www.foodpanda.com"
+            >
+              Watch Now <i class="fas fa-arrow-right"></i
+            ></a>
+          </div>
+          <div class="hightlights-image-container">
+            <img src="images/match.png" alt="" />
+          </div>
+        </div>
+      </section>
+      <section class="teams-container">
+        <div class="top-teams">
+          <h2 class="teams-title">Top Teams</h2>
+          <div class="teams">
+            <!-- .players*6>img[src="images/players/player-$.png"]+h3{Top Player-$} -->
+            <div class="team">
+              <img src="images/teams/Argentina.PNG" alt="" />
+              <h3 class="team-name">Argentina</h3>
+            </div>
+            <div class="team">
+              <img src="images/teams/Brazil.PNG" alt="" />
+              <h3 class="team-name">Brazil</h3>
+            </div>
+            <div class="team">
+              <img src="images/teams/brolivia.PNG" alt="" />
+              <h3 class="team-name">Brolivia</h3>
+            </div>
+            <div class="team">
+              <img src="images/teams/chile.PNG" alt="" />
+              <h3 class="team-name">Chile</h3>
+            </div>
+            <div class="team">
+              <img src="images/teams/Collombia.PNG" alt="" />
+              <h3 class="team-name">Collombia</h3>
+            </div>
+            <div class="team">
+              <img src="images/teams/peru.PNG" alt="" />
+              <h3 class="team-name">Peru</h3>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <h3 class="gallery-title">Gallery</h3>
+        <div class="photo-album">
+          <div class="photo-frame">
+            <div class="photo">
+              <img src="images/gallery-1.PNG" alt="" />
+            </div>
+            <div class="photo-detail">
+              <h3>Golazore Galore in Copa America</h3>
+              <p>
+                The CONMEBOL Copa América 2021 comes to it’s close and the emotion of the dramatic conclusion continues to rock the continent.
+              </p>
+            </div>
+          </div>
+          <div class="photo-frame">
+            <div class="photo">
+              <img src="images/gallery-2.PNG" alt="" />
+            </div>
+            <div class="photo-detail">
+              <h3>the team of the CONMEBOL Copa America chosen by GET</h3>
+              <p>
+                The Technical Study Group (GET) of CONMEBOL have confirmed their team of the CONMEBOL Copa América 2021 which came to a close on Saturday with the dramatic final between Argentina and Brazil.
+              </p>
+            </div>
+          </div>
+          <div class="photo-frame">
+            <div class="photo">
+              <img src="images/gallery-3.PNG" alt="" />
+            </div>
+            <div class="photo-detail">
+              <h3>Messi Receive troffi</h3>
+              <p>
+                His tears at the final whistle, the hug for each of his teammates, his support for the coaches and his video call to loved ones in the middle of the field at the Maracaná. 
+              </p>
+            </div>
+          </div>
     </main>
     <!-- main end -->
+
+    <!-- footer start -->
+    <footer>
+      <div class="footer-container">
+        <div class="logo-container">
+          <img src="images/Logo.png" alt="" />
+        </div>
+        <div class="icon-container">
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-dribbble"></i>
+          <i class="fab fa-twitter"></i>
+
+          <i class="fab fa-youtube"></i>
+        </div>
+        <div class="copyright-container">
+          <p>Copyright © 2022 Football</p>
+        </div>
+      </div>
+    </footer>
+    <!-- footer end -->
   </body>
 </html>
