--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="players">
           <div class="player">
             <div class="player-banner">
-              <img src="/images/players/player-1.png" alt="img1" />
+              <img src="./images/players/player-1.png" alt="img1" />
             </div>
             <div class="player-detail">
               <h3 class="player-title">Neymar Jr</h3>
