--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </div>
           <div class="player">
             <div class="player-banner">
-              <img src="/images/players/player-2.png" alt="" />
+              <img src="./images/players/player-2.png" alt="" />
             </div>
             <div class="player-detail">
               <h3 class="player-title">Lionel Messi</h3>
@@ -88,7 +88,7 @@
           </div>
           <div class="player">
             <div class="player-banner">
-              <img src="/images/players/player-3.png" alt="" />
+              <img src="./images/players/player-3.png" alt="" />
             </div>
             <div class="player-detail">
               <h3 class="player-title">Cristiano Ronaldo</h3>
@@ -101,7 +101,7 @@
           </div>
           <div class="player">
             <div class="player-banner">
-              <img src="/images/players/player-4.png" alt="" />
+              <img src="./images/players/player-4.png" alt="" />
             </div>
             <div class="player-detail">
               <h3 class="player-title">Paulo Dybala</h3>
@@ -114,7 +114,7 @@
           </div>
           <div class="player">
             <div class="player-banner">
-              <img src="/images/players/player-5.png" alt="" />
+              <img src="./images/players/player-5.png" alt="" />
             </div>
             <div class="player-detail">
               <h3 class="player-title">Mesut Ozil</h3>
@@ -129,7 +129,7 @@
           </div>
           <div class="player">
             <div class="player-banner">
-              <img src="/images/players/player-6.png" alt="" />
+              <img src="./images/players/player-6.png" alt="" />
             </div>
             <div class="player-detail">
               <h3 class="player-title">Mauro Icardi</h3>
@@ -142,7 +142,7 @@
           </div>
           <div class="player">
             <div class="player-banner">
-              <img src="/images/players/player-7.png" alt="" />
+              <img src="./images/players/player-7.png" alt="" />
             </div>
             <div class="player-detail">
               <h3 class="player-title">Ángel Di María</h3>
@@ -156,7 +156,7 @@
           </div>
           <div class="player">
             <div class="player-banner">
-              <img src="/images/players/player-8.png" alt="" />
+              <img src="./images/players/player-8.png" alt="" />
             </div>
             <div class="player-detail">
               <h3 class="player-title">Kylian Mbappé</h3>
@@ -170,7 +170,7 @@
           </div>
           <div class="player">
             <div class="player-banner">
-              <img src="/images/players/player-9.png" alt="" />
+              <img src="./images/players/player-9.png" alt="" />
             </div>
             <div class="player-detail">
               <h3 class="player-title">Mohamed Salah</h3>
@@ -185,7 +185,7 @@
           </div>
           <div class="player">
             <div class="player-banner">
-              <img src="/images/players/player-10.png" alt="" />
+              <img src="./images/players/player-10.png" alt="" />
             </div>
             <div class="player-detail">
               <h3 class="player-title">Harry Kane</h3>
@@ -200,7 +200,7 @@
           </div>
           <div class="player">
             <div class="player-banner">
-              <img src="/images/players/player-11.png" alt="" />
+              <img src="./images/players/player-11.png" alt="" />
             </div>
             <div class="player-detail">
               <h3 class="player-title">Kevin De Bruyne</h3>
@@ -213,7 +213,7 @@
           </div>
           <div class="player">
             <div class="player-banner">
-              <img src="/images/players/player-12.png" alt="" />
+              <img src="./images/players/player-12.png" alt="" />
             </div>
             <div class="player-detail">
               <h3 class="player-title">Philippe Coutinho</h3>
