--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
           </div>
         </div>
       </section>
-      <section>
+      <section class="gallery-container">
         <h3 class="gallery-title">Gallery</h3>
         <div class="photo-album">
           <div class="photo-frame">
